# awesome-alternatives-in-rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
results/: .gitignore  results.yaml
src/: main.rs
