[package]
name = "awesome-rewrite-it-in-rust"
version = "0.1.0"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
homepage = "https://github.com/TaKO8Ki/awesome-rewrite-it-in-rust"
repository = "https://github.com/TaKO8Ki/awesome-rewrite-it-in-rust"
default-run = "awesome-rewrite-it-in-rust"

[dependencies]
pulldown-cmark = "0.6"
futures = "=0.3.5"
reqwest = { version="=0.10.4", default_features=false, features=["rustls-tls", "trust-dns"] }
tokio =  {version = "=0.2.21", features = ["macros", "rt-core", "rt-threaded", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
hyper = "=0.13.5"
failure = "0.1"
lazy_static = "1"
env_logger = "0.7"
log = "0.4"
regex = "1"
scraper = "0.11"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0.11"
